[package]
name = "aquifer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-uring = "0.5.0" 
crc32fast = "1.4"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
cpu-time = "1.0"
memory-stats = "1.1"

[[bench]]
name = "checkpoint_bench"
harness = false  # Set to false if you are using Criterion or custom main()